@@ -84,3 +84,14 @@ allprojects {
     }
   }
 }
+
+configure(project(":lucene:core")) {
+  plugins.withType(JavaPlugin) {
+    tasks.named('compileJava').configure {
+      sourceCompatibility = 18
+      targetCompatibility = 18
+      options.compilerArgs += ["--release", 18 as String,  "--add-modules", "jdk.incubator.foreign"]
+      options.compilerArgs -= "-Werror"
+    }
+  }
+}
