@@ -107,6 +107,9 @@ allprojects {
       workingDir testsCwd
       useJUnit()
 
+      include '**/*Test.class', '**/Test*.class'
+      exclude '**/*$*'
+
       minHeapSize = resolvedTestOption("tests.minheapsize")
       maxHeapSize = resolvedTestOption("tests.heapsize")
 
@@ -119,6 +122,8 @@ allprojects {
       if (rootProject.runtimeJavaVersion < JavaVersion.VERSION_16) {
         jvmArgs '--illegal-access=deny'
       }
+
+      jvmArgs "--add-modules", "jdk.incubator.foreign"
 
       systemProperty 'java.util.logging.config.file', file("${resources}/logging.properties")
       systemProperty 'java.awt.headless', 'true'
